# invest-playground

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: etf.py  simulation.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/models/: etf.py  simulation.py
backend/app/services/: etf_service.py  simulation_service.py
backend/app/utils/: finance.py
docs/: PRD.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/simulate/: page.tsx
frontend/components/layout/: header.tsx
frontend/components/ui/: input.tsx
frontend/lib/: api.ts  utils.ts
frontend/types/: api.ts
